# home_accounting

./: .gitignore  Makefile  README.md  models.py  pyproject.toml  repositories.py  schema.py
app/: __main__.py  db.py  middleware.py  providers.py  security.py
app/controllers/: __init__.py
app/controllers/pages/: __init__.py  auth.py  budget.py  calendar.py  dashboard.py  landing.py  transaction.py
app/controllers/pages/references/: __init__.py  category.py
app/templates/: auth.html.jinja2  auth_v2.html.jinja2  budget.html.jinja2  calendar_v3.html.jinja2  dashboard.html.jinja2  landing.html.jinja2  navbar.html.jinja2  transaction.html.jinja2  transaction_v2.html.jinja2
app/templates/references/: category.html.jinja2  category_v2.html.jinja2  category_v3.html.jinja2
services/reference/: category.py
tests/: conftest.py  factories.py  test_models.py
