[project]
name = "your-home-accounting"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.4.1",
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "litestar-users>=1.7.0",
    "litestar[standard]>=2.16.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "polyfactory>=2.21.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.8",
]
